# wap-labs

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  AGENTS.md  AUTHORS.md  CLAUDE.md  CONTRIBUTING.md  Makefile  NOTICE.md  README.md  docker-compose.yml  eslint.shared.mjs  index.html  package.json  parse-pdf-remaining.fish  parse-pdf.fish  pnpm-lock.yaml  pnpm-workspace.yaml
browser/src-tauri/: Cargo.toml  tauri.conf.json
browser/src-tauri/capabilities/: default.json
browser/src-tauri/icons/: icon.icns
browser/src-tauri/resources/wbxml/: README.md
browser/src-tauri/src/: bootstrap.rs  contract_types.rs  engine_bridge.rs  fetch_host.rs  kannel_smoke.rs  lib.rs  main.rs  transport.rs  waves_config.rs
browser/src-tauri/src/engine_bridge/: engine_adapter.rs  engine_commands.rs
browser/src-tauri/src/tests/: bootstrap.rs  engine_flow.rs  engine_wrappers.rs  fetch_commands.rs  mod.rs  tauri_commands.rs
browser/src-tauri/tests/: kannel_smoke.rs
browser/src-tauri/tests/fixtures/integration/: load-nav-external.wml
engine-wasm/engine/: Cargo.toml  README.md
engine-wasm/engine/fuzz/: Cargo.toml  README.md
engine-wasm/engine/fuzz/corpus/engine_wml_fuzzer/: seed-deep-nesting-near-depth-limit.wml  seed-nav-cycle-two-card.wml
engine-wasm/engine/fuzz/fuzz_targets/: engine_wml_fuzzer.rs
engine-wasm/engine/src/: engine_public_api.rs  engine_runtime_internal.rs  engine_script_types.rs  engine_tests.rs  engine_wasm_bindings.rs  engine_wasm_bindings_tests.rs  lib.rs
engine-wasm/engine/src/engine_runtime_internal/: navigation.rs  script_effects.rs  timers.rs  trace.rs
engine-wasm/engine/src/engine_tests/: actions_timers.rs  mod.rs  navigation_metadata.rs  panic_containment.rs  script_runtime.rs  traces_public_api.rs
engine-wasm/engine/src/layout/: flow_layout.rs  mod.rs
engine-wasm/engine/src/nav/: focus.rs
engine-wasm/engine/src/parser/: mod.rs  wml_parser.rs  wml_parser_tests.rs
engine-wasm/engine/src/parser/wml_parser/: actions.rs  head.rs  mod.rs  nodes.rs  tests.rs  xml.rs
engine-wasm/engine/src/render/: mod.rs  render_list.rs
engine-wasm/engine/src/runtime/: card.rs  deck.rs  events.rs  mod.rs  node.rs
engine-wasm/engine/src/wavescript/: decoder.rs  mod.rs  vm.rs  vm_tests.rs
engine-wasm/engine/src/wavescript/stdlib/: dialogs.rs  mod.rs  wmlbrowser.rs  wmlbrowser_tests.rs
engine-wasm/engine/src/wmlscript/: decoder.rs  mod.rs  value.rs  vm.rs
engine-wasm/engine/src/wmlscript/stdlib/: wmlbrowser.rs
engine-wasm/engine/tests/fixtures/field/: README.md  openwave-2011-example-01-navigation.wml  openwave-2011-example-02-softkeys-template.wml  openwave-2011-example-05-forms-variables.wml
engine-wasm/engine/tests/fixtures/phase-a/: basic-two-card.wml  link-wrap.wml  missing-fragment.wml  mixed-inline-text-links.wml  task-action-order.wml
transport-rust/: .gitignore  Cargo.toml  README.md
transport-rust/src/: fetch_body.rs  fetch_policy.rs  fetch_runtime.rs  gateway.rs  lib.rs  native_fetch.rs  network.rs  request_meta.rs  responses.rs  smpp_profile.rs  tcp_profile.rs  test_support.rs  wbxml.rs  wsp_capability.rs  wsp_connectionless_primitive_profile.rs  wsp_registry.rs  wtp_replay_window.rs
transport-rust/src/fetch_runtime/: execution.rs
transport-rust/src/network/: wsp.rs  wtls.rs  wtp.rs
transport-rust/src/network/wdp/: datagram.rs  mod.rs  sar.rs  transport_trait.rs  udp_adapter.rs
transport-rust/src/network/wsp/: decoder.rs  encoder.rs  encoding_version.rs  header_block.rs  header_registry.rs  pdu.rs  session.rs
transport-rust/src/network/wtls/: alerts.rs  handshake.rs  record.rs
transport-rust/src/network/wtp/: duplicate_cache.rs  retransmission.rs  state_machine.rs
transport-rust/src/tests/: fetch_mapping.rs  mod.rs  replay_profiles.rs  request_gateway_policy.rs  wbxml_env.rs
transport-rust/tests/: fixture_harness.rs  interop_replay.rs  kannel_smoke.rs  kannel_support.rs
transport-rust/tests/fixtures/transport/: README.md
transport-rust/tests/fixtures/transport/invalid_method/: expected.json  meta.toml  request.json
transport-rust/tests/fixtures/transport/invalid_url/: expected.json  meta.toml  request.json
transport-rust/tests/fixtures/transport/protocol_error_5xx_mapped/: expected.json  map_input.json  meta.toml
transport-rust/tests/fixtures/transport/retry_exhausted_unreachable/: expected.json  meta.toml  request.json
transport-rust/tests/fixtures/transport/smpp_adaptation_scope_mapped/: meta.toml  scope_fixture.json
transport-rust/tests/fixtures/transport/unsupported_content_type_mapped/: expected.json  map_input.json  meta.toml
transport-rust/tests/fixtures/transport/uri_too_long_1025/: expected.json  meta.toml  request.json
transport-rust/tests/fixtures/transport/utf16_odd_length_protocol_error_mapped/: expected.json  map_input.json  meta.toml
transport-rust/tests/fixtures/transport/utf16le_textual_wml_mapped/: expected.json  map_input.json  meta.toml
transport-rust/tests/fixtures/transport/wap_invalid_gateway_base/: expected.json  meta.toml  request.json
transport-rust/tests/fixtures/transport/wireless_profiled_tcp_policy_mapped/: meta.toml  policy_fixture.json
transport-rust/tests/network/interop/: README.md  connect_session_seed.json  duplicate_tid_seed.json  get_reply_replay.json  get_reply_seed.json  retransmission_seed.json
transport-rust/wbxml_samples/: fixtures.toml
(+1132 files in other folders)
