[package]
name = "lowband_transport_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "lowband_transport_rust"
crate-type = ["rlib"]

[dependencies]
base64 = "0.22"
libc = "0.2"
libloading = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
url = "2"

[dev-dependencies]
toml = "0.8"
