[package]
name = "lowband_transport_rust"
version = "0.3.0"
edition = "2021"
description = "Lowband in-process transport library for the WaveNav stack"
license = "MIT"
authors = ["Dylan Steele <dylansteele57@gmail.com>"]

[lib]
name = "lowband_transport_rust"
crate-type = ["rlib"]

[dependencies]
base64 = "0.22"
libc = "0.2"
libloading = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
ts-rs = { version = "12", features = ["serde-compat"] }
url = "2"

[dev-dependencies]
toml = "0.8"
