[package]
name = "wavenav_host"
version = "0.1.0"
edition = "2021"
description = "Tauri host shell for the WaveNav desktop browser integration"
license = "MIT"
authors = ["Dylan Steele <dylansteele57@gmail.com>"]

[lib]
name = "wavenav_host_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
lowband_transport_rust = { path = "../../transport-rust" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
wavenav_engine = { path = "../../engine-wasm/engine", default-features = false }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
