[package]
name = "wavenav_host"
version = "0.3.0"
edition = "2021"
description = "WAP/WML based browser 1.x"
license = "MIT"
authors = ["Dylan Steele <dylansteele57@gmail.com>"]
default-run = "wavenav_host"

[lib]
name = "wavenav_host_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
lowband_transport_rust = { path = "../../transport-rust" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
ts-rs = { version = "12", features = ["serde-compat"] }
wavenav_engine = { path = "../../engine-wasm/engine", default-features = false }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
