[package]
name = "wavenav_engine"
version = "0.2.0"
edition = "2021"
description = "WaveNav WML runtime, parser, and rendering engine (native + WASM)"
license = "MIT"
authors = ["Dylan Steele <dylansteele57@gmail.com>"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wasm-bindings"]
wasm-bindings = ["dep:serde-wasm-bindgen", "dep:wasm-bindgen"]

[dependencies]
quick-xml = "0.38"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = { version = "0.6", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
url = "2"

[dev-dependencies]
js-sys = "0.3"
wasm-bindgen-test = "0.3"
